# Logic-Puzzles

./: Dockerfile  README.md  client.py  inference.py  models.py  pyproject.toml  validate.py
.github/workflows/: validate.yml
docs/: installation.md
scripts/: setup_env.sh  validate-submission.sh
server/: Dockerfile  app.py  environment.py
